<resources>
    <string name="app_name">Tip Calculator</string>
    <string name="tip_calculator">Tip It Like It\'s Hot!</string>
    <string name="label_service_cost">Service Cost</string>
    <string name="hint_service_cost">Enter service cost</string>
    <string name="label_service_quality">Rate the Service</string>
    <string name="option_service_amazing">Amazing (20%)</string>
    <string name="option_service_good">Good (15%)</string>
    <string name="option_service_ok">OK (10%)</string>
    <string name="label_round_tip">Round up the tip?</string>
    <string name="button_calculate_tip">Calculate Tip</string>
    <string name="label_tip_amount">Tip Amount</string>
    <string name="output_final_tip">Tip Amount: %s</string>
    <string name="ic_cost_of_service">Service Cost Icon</string>
    <string name="ic_service_quality">Service Quality Icon</string>
    <string name="ic_roundup">Round Up Icon</string>
</resources>